# web-scrapper

./: README.md  main.py  pyproject.toml  result.json
